--- a/index.html
+++ b/index.html
@@ -8,13 +8,30 @@
     <script
       src="https://code.jquery.com/jquery-3.5.1.min.js"
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-      crossorigin="anonymous"
-    ></script>
+      crossorigin="anonymous">
+      </script>
+
+       <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+    <script 
+       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </head>
+   
+  <body>
 <header>
     <h1>Weather Report</h1>
 </header>
-<body>
-    <style src="assets/script.js"></style>
+
+<nav class="navbar bg-body-tertiary">
+    <div class="container-fluid">
+      <form class="d-flex" role="search">
+        <input id="cityname" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        <button id='searchButton' class="btn btn-outline-success" type="submit">Search</button>
+      </form>
+    </div>
+    <div id="notvalidcity"></div>
+  </nav>
+
+    <script src="./assets/script.js"></script>
 </body>
 </html>
