--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
       crossorigin="anonymous">
       </script>
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
        <script
         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
     <script 
@@ -24,6 +24,7 @@
 </header>
 
 <nav class="navbar bg-body-tertiary">
+    <h2>Search for a City:</h2>
     <div class="container-fluid">
       <form class="d-flex" role="search">
         <input id="cityname" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
