data appending to page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,11 @@
         <button id='searchButton' class="btn btn-outline-success" type="submit">Search</button>
       </form>
     </div>
+    
     <div id="notvalidcity"></div>
+    <div id ="weatherCard" >
+        
+      </div>
   </nav>
   <script
   src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
