working on local storage

--- a/index.html
+++ b/index.html
@@ -33,10 +33,14 @@
     </div>
     
     <div id="notvalidcity"></div>
+</nav>
+    <div> 
+        <h2 id="chosenCity"></h2>
+    </div>
     <div id ="weatherCard" >
         
       </div>
-  </nav>
+  
   <script
   src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
   integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
