working on local storage items

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </div>
     
     <div id="notvalidcity"></div>
+    <div id="citySearchHistory"></div>
 </nav>
     <div> 
         <h2 id="chosenCity"></h2>
